# Leopard

./: .gitignore  CMakeLists.txt  PARALLEL_QUICKSORT.md  README.md  THREAD_SAFETY.md  leopard
include/: Leopard.hpp
src/: Leopard.cpp
